removed general vertical-align styling for mat-icons fixed alignment of icon-button within quick-list components and its derived classes

--- a/projects/material-addons/src/themes/common/styles.scss
+++ b/projects/material-addons/src/themes/common/styles.scss
@@ -250,10 +250,6 @@ mad-danger-button {
   text-transform: uppercase !important;
 }
 
-.mat-icon {
-  vertical-align: middle;
-}
-
 .toolbar-title {
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -490,4 +486,12 @@ mat-form-field .mat-mdc-form-field {
 
 .pointer {
   cursor: pointer;
+}
+
+.quick-list-row {
+  display: flex;
+  flex-direction: row;
+  mad-icon-button {
+    margin-top: 8px;
+  }
 }
